# unity-tribev2

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml
scripts/: __init__.py  generate_weights.py  run_prototype.py  run_server.py
tests/: test_pipeline.py
tribe_lite/: __init__.py  config.py  pipeline.py
tribe_lite/capture/: __init__.py  audio_capture.py  video_capture.py
tribe_lite/encoders/: __init__.py  audio_encoder.py  base_encoder.py  video_encoder.py
tribe_lite/fusion/: __init__.py  fusion_layer.py
tribe_lite/output/: __init__.py  schema.py
tribe_lite/scorer/: __init__.py  brain_scorer.py  region_map.py  weight_matrix.py
unity_client/: README.md  TribeLiteClient.cs
weights/: default_weights.npz
